@@ -23,7 +23,8 @@ set -e
 
 # Make sure that setting the SPOT_BDD_TRACE envvar actually does
 # something.
-genltl --kr-nlogn=2 | SPOT_BDD_TRACE=1 ltl2tgba -D >out 2>err
+genltl --kr-nlogn=2 |
+    SPOT_BDD_TRACE=1 ltl2tgba -x tls-max-states=0 -D >out 2>err
 cat err
 grep spot: out && exit 1
 grep 'spot: BDD package initialized' err
@@ -34,3 +35,10 @@ test 11 = `grep -c 'spot: BDD GC' err`
 # Minimal size for this automaton.
 # See also https://www.lrde.epita.fr/dload/spot/mochart10-fixes.pdf
 test "147,207" = `autfilt --stats=%s,%e out`
+
+# With the default value of tls-max-states, no GC is needed
+genltl --kr-nlogn=2 | SPOT_BDD_TRACE=1 ltl2tgba -D --stats=%s,%e >out 2>err
+cat err
+grep 'spot: BDD package initialized' err
+test 0 = `grep -c 'spot: BDD GC' err`
+test "147,207" = `cat out`
